# arrowtable

./: CMakeLists.txt  Dockerfile  README.md  arrow-env.dockerfile  docker-compose.yml  main.cc  run.sh
operation/: filetype.h  xml2json.hpp  xmlfile.cc  xmlfile.h
resource/: 01.xml
tests/: CMakeLists.txt  operation.cc
